// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyFooterSection View Component ProductDetailSection true should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component is not ProductDetailView should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage & earnedReward true should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage & isGuest true should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <Styled(BodyCopy)
      className="symbolWrapper"
      color="text.primary"
      component="span"
      fontFamily="secondary"
      fontSize="fs9"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      abc
    </Styled(BodyCopy)>
    <Styled(Anchor)
      anchorVariation="primary"
      fontSizeVariation="medium"
      handleLinkClick={[Function]}
      noLink={true}
      underline={true}
    />
  </span>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage true should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isConfirmationPage && earnedRewardAvailable should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      CreateAccountAction
    </Styled(Anchor)>
    <span
      className="space-between"
    />
    <Styled(BodyCopy)
      className="symbolWrapper"
      color="text.primary"
      component="span"
      fontFamily="secondary"
      fontSize="fs9"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isConfirmationPage true should render correctly 1`] = `
<div
  className=" footer-wrapper"
/>
`;

exports[`LoyaltyFooterSection View Component isPlcc & isReviewPage true should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <Styled(Anchor)
      anchorVariation="primary"
      fontSizeVariation="medium"
      handleLinkClick={[Function]}
      noLink={true}
      underline={true}
    >
      loginAction
    </Styled(Anchor)>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isProductDetailView && plcc && isGuest should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <Styled(BodyCopy)
      className="symbolWrapper"
      color="text.primary"
      component="span"
      fontFamily="secondary"
      fontSize="fs9"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      abc
    </Styled(BodyCopy)>
    <Styled(Anchor)
      anchorVariation="primary"
      fontSizeVariation="medium"
      handleLinkClick={[Function]}
      noLink={true}
      underline={true}
    >
      ApplyNowAction
    </Styled(Anchor)>
    <span
      className="space-between"
    />
    <Styled(BodyCopy)
      className="symbolWrapper"
      color="text.primary"
      component="span"
      fontFamily="secondary"
      fontSize="fs9"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      abc
    </Styled(BodyCopy)>
    <Styled(Anchor)
      anchorVariation="primary"
      fontSizeVariation="medium"
      handleLinkClick={[Function]}
      noLink={true}
      underline={true}
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isProductDetailView should render correctly 1`] = `
<div
  className=" footer-wrapper"
>
  <div
    className="links-wrapper"
  >
    <Styled(BodyCopy)
      className="symbolWrapper"
      color="text.primary"
      component="span"
      fontFamily="secondary"
      fontSize="fs9"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      abc
    </Styled(BodyCopy)>
    <span
      className="space-between"
    />
    <Styled(BodyCopy)
      className="symbolWrapper"
      color="text.primary"
      component="span"
      fontFamily="secondary"
      fontSize="fs9"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <span
        className="applyNowLink"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          fontSizeVariation="medium"
          handleLinkClick={[Function]}
          noLink={true}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;
